update with usage instructions

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -74,6 +74,7 @@
                     <input type="number" id="seed" placeholder="For reproducibility">
                 </div>
                 <button class="btn btn-generate" id="generateBtn">
+                    <span class="btn-icon">⚡</span>
                     Generate
                 </button>
             </div>
