--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -83,10 +83,10 @@
         <!-- Results Panel -->
         <section class="results-panel" id="resultsPanel">
             <h3>Results</h3>
+            <button class="btn btn-secondary btn-small" id="showResults">Show Results</button>
             <div class="results-container" id="resultsContainer">
                 <!-- Dynamically populated -->
             </div>
-            <button class="btn btn-secondary btn-small" id="refreshResults">Refresh Results</button>
         </section>
 
         <!-- Actions Panel -->
